--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/react": "^2.2.6",
     "framer-motion": "^10.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
